# statracking

./: -l.txt  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  README.md  compose.yaml  db.sqlite3  db.sqlite32  manage.py  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  test_release.yaml
backend/: admin.py  api.py  apps.py
backend/migrations/: 0001_initial.py  0002_record.py  0003_rename_game_id_record_game.py  0004_alter_game_name_game_backend_gam_name_2bfe89_idx_and_more.py  0005_remove_game_backend_gam_name_2bfe89_idx_and_more.py  0006_stat_remove_game_backend_gam_name_d2bf4e_idx_and_more.py  0007_record_victory_stat_total_lost_stat_total_won.py
backend/models/: base.py  game.py  games.py  images.py  record.py  records.py  statistics.py  stats.py
backend/responses/: base.py  games.py  record.py  stats.py
backend/service/: game.py  games.py  record.py
backend/services/: games.py  images.py  records.py  stats.py
backend/views/: game.py  games.py  record.py  stats.py
docs/source/: backend.migrations.rst  backend.models.rst  backend.responses.rst  backend.rst  backend.service.rst  backend.services.rst  backend.views.rst  conf.py  image_retrieval.pubg.rst  image_retrieval.rst  index.rst  modules.rst  statracking.pubg.rst  statracking.rst
image_retrieval/: box.py  parse.py
image_retrieval/pubg/: calculate.py
statracking/: api.py  asgi.py  box.py  parse.py  settings.py  urls.py  wsgi.py
statracking/pubg/: calculate.py
statracking/responses/: game.py  record.py
statracking/routers/: game.py  track.py
tests/: test_parse.py
